--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "storybook": "ng run storybook-example:storybook",
-    "build-storybook": "ng run storybook-example:build-storybook"
+    "build-storybook": "ng run storybook-example:build-storybook",
+    "test-storybook": "test-storybook"
   },
   "private": true,
   "dependencies": {
@@ -37,6 +38,7 @@
     "@storybook/angular": "^8.0.8",
     "@storybook/blocks": "^8.0.8",
     "@storybook/test": "^8.0.8",
+    "@storybook/test-runner": "^0.17.0",
     "storybook": "^8.0.8",
     "typescript": "~5.4.2"
   }
